// Vitest Snapshot v1

exports[`fixtures > ./fixtures/all-hoist.vue 1`] = `
"<script lang=\\"ts\\">
const name = 'title'
</script>
<script setup lang=\\"ts\\">

/* hoist static placeholder */</script>

<template>
  {{ name }}
</template>
"
`;

exports[`fixtures > ./fixtures/basic.vue 1`] = `
"<script lang=\\"ts\\">
const a = 'Foo'
const b = 'Foo'!
const c = 1 + 2
const d = 1 || 2
const e = !1
const f = 1 ? 2 : 3
const g = 1 as number
</script>
<script setup lang=\\"ts\\">







// const h = <number>2
const i = {
  a: 'hello',
}
const j = [1, 2, 3]
const k = Symbol()
</script>

<template>
  <div />
</template>
"
`;

exports[`fixtures > ./fixtures/magic-comment.vue 1`] = `
"<script lang=\\"ts\\">
const name = /* hoist-static */ (globalThis as any).fn()
</script>
<script setup lang=\\"ts\\">

/* hoist static placeholder */</script>
"
`;

exports[`fixtures > ./fixtures/no-hoist.vue 1`] = `undefined`;

exports[`fixtures > ./fixtures/props.vue 1`] = `
"<script lang=\\"ts\\">
const name = 'title'
</script>
<script setup lang=\\"ts\\">


defineProps([name])
</script>
"
`;
